# ocular-example-integrations

./: .example.env  .gitignore  .licenserc.yaml  .pylintrc.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yaml
common/: __init__.py  api.py  constants.py  metadata.py  parameters.py  pipelines.py  schemas.py
crawler/: README.md  main.py
downloader/: README.md  main.py
uploader/: README.md  main.py
