[project]
name = "ocular-example-integrations"
version = "0.0.1"
description = "Example integrations for the Ocular project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic~=2.11.5",
  "requests~=2.32.3"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uploader", "crawler", "downloader", "common"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
]

[project.scripts]
uploader = "uploader.main:main"
crawler = "crawler.main:main"
downloader = "downloader.main:main"
